# barb

./: .gitignore  CHANGELOG.md  README.md  config.yaml.example  dogfood.sh  project_documentation.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  codeql.yml  publish.yml
barb/: __init__.py  __main__.py  allowlist.py  allowlist_staleness.py  banner.py  batch.py  cache.py  config.py  data_update.py  defang.py  help.py  main.py  models.py  scoring.py  url_parser.py  version_check.py
barb/analyzers/: base.py  brand.py  encoding.py  entropy.py  file_ext.py  homoglyph.py  ip_url.py  keyword.py  lexical.py  protocol.py  shortener.py  subdomain.py  tld.py  typosquat.py
barb/data/: allowlist.json  brands.json  suspicious_tlds.json
barb/enrichers/: __init__.py  asn.py  crtsh.py  dns.py  protocol.py  rdap.py
barb/explain/: __init__.py  injection.py  llm.py  prompt.py  protocol.py  template.py
barb/output/: __init__.py  export.py  formatter.py
docs/: MANUAL.md  README.md  analyzers.md  commands.md  configuration.md  getting-started.md  osint.md  output-formats.md  pipeline.md
eval/: README.md  __init__.py  fetch_corpus.py  run_eval.py
eval/fixtures/: sample_corpus.csv
phishing_analyzer/: __init__.py  __main__.py  banner.py  batch.py  config.py  defang.py  main.py  models.py  scoring.py  url_parser.py  version_check.py
phishing_analyzer/analyzers/: __init__.py  brand.py  encoding.py  entropy.py  homoglyph.py  ip_url.py  protocol.py  shortener.py  subdomain.py  tld.py
phishing_analyzer/data/: brands.json  homoglyphs.json  shorteners.json
phishing_analyzer/explain/: prompt.py  protocol.py  template.py
phishing_analyzer/output/: export.py  formatter.py
tests/: conftest.py  test_allowlist_staleness.py  test_analyze_cli.py  test_analyzers.py  test_batch_aggregate.py  test_cache.py  test_cli.py  test_config.py  test_data_update.py  test_enricher_robustness.py  test_enrichers.py  test_eval_harness.py  test_explain.py  test_explain_llm_providers.py  test_export.py  test_formatter.py  test_injection_scan_runs_on_explain_path.py  test_llm_failure_posture.py  test_models.py  test_new_analyzers.py  test_output_render_safety.py  test_refang.py  test_scoring.py  test_scoring_verdict_tuning.py  test_url_parser.py  test_url_parser_property.py  test_version_check.py
tooling/: ruff-base.toml
