[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barb-phish"
version = "1.8.0"
description = "Heuristic phishing URL analyzer for SOC/DFIR workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Christian Huhn" }]
keywords = ["phishing", "url-analysis", "security", "soc", "dfir", "homoglyph", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "shipwright-kit>=0.12.0,<0.13.0", # runtime: barb.config imports shipwright_kit.config; barb.explain.llm uses shipwright_kit.llm
]

[project.optional-dependencies]
llm = ["anthropic>=0.30.0", "openai>=1.30.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "hypothesis>=6.0",
]

[project.scripts]
barb = "barb.main:main"

[project.urls]
Homepage = "https://github.com/duathron/barb"
Repository = "https://github.com/duathron/barb"
"Bug Tracker" = "https://github.com/duathron/barb/issues"
LinkedIn = "https://www.linkedin.com/in/christian-huhn-76a407114"

[tool.setuptools.packages.find]
include = ["barb*"]

[tool.setuptools.package-data]
barb = ["data/*.json"]

[tool.ruff]
extend = "tooling/ruff-base.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
